# linuxdoctor

./: .gitignore  Makefile  README.md  RELEASE.md  linuxdoctor.py  main.py  pyproject.toml
docs/: ticket-221-recommendation.md
src/linuxdoctor/: __init__.py  analyze.py  analyzenode.py  cli.py  collectors.py  host_registry.py  node_analyzer.py  prometheus.py  recommendations.py  ssh_collector.py  web.py
tests/: __init__.py  test_analyze.py  test_analyzenode.py  test_cli.py  test_collectors.py  test_host_registry.py  test_prometheus.py  test_recommendations.py  test_ssh_collector.py  test_web.py
