[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxdoctor"
version = "0.1.0"
description = "Analyze performance metrics and recommend a course of action to resolve performance issues"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "psutil>=5.9",
    "pyyaml>=6.0",
]

[project.scripts]
linuxdoctor = "linuxdoctor.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]